--- a/words/03-users.Rmd
+++ b/words/03-users.Rmd
@@ -213,11 +213,15 @@ on data.explore.gov, but they don't show up in his
     grep -r '"6q59-uqyb"' .|grep explore
 -->
 
-#### `roleName` and `flags`
+#### `roleName`
 You may have noticed that most of the people in the above tables have
 `roleName` fields. I think that people tend to have a `roleName` field
 if and only if they work for data publishers. To make that more clear,
 here's a table.
+
+```{r data.publishers}
+users$has.role <- !is.na(users$roleName)
+```
 
 ```{r roleName.for.govt}
 table(users$n_tables > users$n_views, users$has.role)
@@ -253,22 +257,31 @@ fisher.test(table(users$n_tables > users$n_views, users$has.role))
 
 and find that these counts are indeed disproportionate. 
 
-```{r data.publishers}
-subset(users, !is.na(roleName))
-users$has.role <- !is.na(users$roleName)
-users$has.flag <- !is.na(users$flags)
-```
+This is all to say that **`roleName` appears to be a decent proxy for "data publisher"**.
 
+#### `flags`
+In a similar vein, I looked at Socrata users with a `flags` field.
 
 ```{r socrata.employees}
-subset(users, !is.na(flags))['displayName']
+users$has.flag <- !is.na(users$flags)
+subset(users, has.flag)['displayName']
 ```
+
+These appear to all be Socrata employees.
+
+Hmm. Does anyone have both a `roleName` and a flag?
 
 ```{r rolename.and.flag}
-subset(users, !is.na(roleName) & !is.na(flags))
+subset(users, has.flag & has.role)[c('displayName', 'roleName')]
 ```
 
+[Beth](http://www.socrata.com/newsroom-article/government-innovator-beth-blauer-joins-socrata/)
+and [Bryant](www.linkedin.com/in/bryantlau) are both
+Socrata employees. I don't know why they have `roleName` fields.
 
+Anyway, it looks like the `flags` field is a decent proxy for "Socrata employee"
+
+###
 
 
 users$prop.tables <- users$n_tables / users$n_views
