--- a/words/03-users.Rmd
+++ b/words/03-users.Rmd
@@ -329,6 +329,11 @@ columns <- c('displayName', 'n_tables', 'n_views', 'profileImageUrlLarge')
 head(citizens[order(citizens$n_views, decreasing = T),columns], 20)
 ```
 
+Then I ran queries like this to find what portals and data they used.
+
+    subset(socrata, owner.id == 'aeze-ppu4')[c('portal', 'id', 'tableId', 'name', 'viewCount')]
+    table(subset(socrata, owner.id == 'aeze-ppu4')$portal)
+
 #### not The White House
 [not The White House](https://explore.data.gov/profile/not-The-White-House/732w-crxq)
 is "[w]ay more open and transparent than the official White House website."
@@ -344,9 +349,19 @@ not The White House also has its own separate website,
 which is a parody of the [official White House website](http://www.whitehouse.gov/).
 
 #### NL
-https://databox.worldbank.org/profile/NL/aeze-ppu4
+[NL](https://finances.worldbank.org/profile/NL/aeze-ppu4)
+used to do a lot with World Bank data, though she hasn't for a few months.
 
-###
+She also has some views
+[on databox.worldbank.org](https://databox.worldbank.org/profile/NL/aeze-ppu4).
+Interestingly, that portal didn't show up in my list of Socrata portals.
+
+
+#### VinylFox
+[VinylFox](https://data.baltimorecity.gov/profile/VinylFox/86yi-jydw?)
+has also made a bunch of interesting filters on Baltimore data.
+His website discusses this [a bit more](http://www.vinylfox.com/about/).
+<!-- Talk to him. -->
 
 
 users$prop.tables <- users$n_tables / users$n_views
