--- a/words/03-users.Rmd
+++ b/words/03-users.Rmd
@@ -335,6 +335,8 @@ Then I ran queries like this to find what portals and data they used.
     table(subset(socrata, owner.id == 'aeze-ppu4')$portal)
 
 #### not The White House
+![not The White House](images/not The White House.jpg)
+
 [not The White House](https://explore.data.gov/profile/not-The-White-House/732w-crxq)
 is "[w]ay more open and transparent than the official White House website."
 It's another account that's just making filters on one dataset, but they're a bit more
@@ -349,6 +351,8 @@ not The White House also has its own separate website,
 which is a parody of the [official White House website](http://www.whitehouse.gov/).
 
 #### NL
+![NL](<%= @item.identifier %>NL.jpg)
+
 [NL](https://finances.worldbank.org/profile/NL/aeze-ppu4)
 used to do a lot with World Bank data, though she hasn't for a few months.
 
@@ -358,11 +362,21 @@ Interestingly, that portal didn't show up in my list of Socrata portals.
 
 
 #### VinylFox
+![VinylFox](<%= @item.identifier %>VinylFox.jpg)
+
 [VinylFox](https://data.baltimorecity.gov/profile/VinylFox/86yi-jydw?)
 has also made a bunch of interesting filters on Baltimore data.
 His website discusses this [a bit more](http://www.vinylfox.com/about/).
 <!-- Talk to him. -->
 
+#### Dave Francis Rodrigues
+![Dave Francis Rodrigues](<%= @item.identifier %>Dave Francis Rodrigues.jpg)
+
+[Dave](https://finances.worldbank.org/profile/Dave-Francis-Rodrigues/ef7y-9vvy?)
+has made a lot of filters and charts about India.
+He also names his views really well. In particular, I like his hack of prefixing
+all of the titles with "Dave_"; this gets around how Socrata doesn't make it particularly
+clear who created the view that you are looking at.
 
 users$prop.tables <- users$n_tables / users$n_views
 # ggplot(users) + aes(x = has.role, y = prop.tables) + geom_violin() + scale_y_sqrt('Proportion of views that are datasets (sort of)') + geom_hline(y = 1)
