--- a/words/03-users.Rmd
+++ b/words/03-users.Rmd
@@ -326,7 +326,7 @@ Let's try this yet again, but this time, let's look only at people with profile 
 ```{r citizens}
 citizens <- subset(users, !has.flag & !has.role & n_tables == 0 & !is.na(profileImageUrlLarge))
 columns <- c('displayName', 'n_tables', 'n_views', 'profileImageUrlLarge')
-head(citizens[order(citizens$n_views, decreasing = T),columns], 20)
+head(citizens[order(citizens$n_views, decreasing = T),columns], 10)
 ```
 
 Then I ran queries like this to find what portals and data they used.
@@ -378,27 +378,17 @@ He also names his views really well. In particular, I like his hack of prefixing
 all of the titles with "Dave_"; this gets around how Socrata doesn't make it particularly
 clear who created the view that you are looking at.
 
-users$prop.tables <- users$n_tables / users$n_views
-# ggplot(users) + aes(x = has.role, y = prop.tables) + geom_violin() + scale_y_sqrt('Proportion of views that are datasets (sort of)') + geom_hline(y = 1)
+#### Everyone else
+Using my most recent rule for selecting citizens from the user table,
+I only see ``nrow(citizens)`` citizens. The few that I discussed above
+have dozens of views, but most people have 1. The histogram below shows
+how many views users have created. To make it easier to read, I left out
+the top five users; they each have more than 20 views.
 
-m <- glm(n_tables ~ has.role * has.flag, data = users, family = 'poisson')
-par(mfrow=c(2,2))
-print(summary(aov(m)))
-par(mfrow=c(1,1))
+```{r citizen.views}
+hist(citizens$n_views[citizens$n_views < 10],
+  col = 1, border = NA,
+  xlab = 'Number of Socrata views created by the user',
+  ylab = 'Number of users', main = 'How many views do Socrata users make?'
+)
 ```
-
-This sort of says that people with roles tend to upload more tables than people
-with neither a role nor a flag.
-
-But the variance of the residuals of that model is not consistant, so I wouldn't
-put too much faith in it. Let's make a graph instead.
-
-```{r data.publishers}
-ggplot(subset(users, id != 'e8ug-wzay')) + aes(x = n_tables, group = paste(has.role, has.flag), fill = paste(has.role, has.flag)) + geom_bar() + scale_x_log10('Number of tables uploaded to the portal')
-```
-
-Hmm not that helpful. Let's go back to looking at the individual people.
-
-
-
-### profileLastModified
