--- a/words/03-users.Rmd
+++ b/words/03-users.Rmd
@@ -114,7 +114,7 @@ It looks like publishers and administrators (red) make more views. Big surprize.
 
 ### How many tables?
 
-Let's make that same plot, but for the number of tables. (A table is a raw
+Let's make that same plot but for the number of tables. (A table is a raw
 uploaded dataset, before any view filtering. A table can have many views,
 and a view has only one table.)
 
@@ -143,29 +143,6 @@ understand.
 ```{r publishers}
 users[users$n_views < users$n_tables,]
 ```
-
-I suspect that open data departments upload lots of raw datasets but don't
-create very many filters on them; other people do that when they're analyzing
-the data. So what happens if we compare the number of derived views that a
-user has to the number of tables that she has?
-
-```{r derivedness}
-users$n.derived <- users$n_views - users$n_tables
-users$prop.derived <- users$n.derived/users$n_views
-ggplot(subset(users, n_views >= n_tables)) +
-  aes(x = n_tables, y = prop.derived, color = roleName) +
-  geom_point() + scale_x_log10('Number of tables')
-```
-
-Not that interesting. Let's try a different one.
-
-```{r derivedness.2}
-ggplot(subset(users, n_views >= n_tables & id != 'e8ug-wzay')) +
-  aes(x = n.derived, y = n_tables, color = roleName) +
-  geom_point() + scale_y_log10('Number of tables') + scale_x_log10('Number of derived views')
-```
-
-Not that interesting either. Hmm. Let's try this a different way.
 
 ## Aside from data publishers and Socrata employees, who uses Socrata a lot?
 I have a hunch that the `roleName` field is only populated for people who work
@@ -430,7 +407,7 @@ Cool.
 I remembered that I had the whole views dataset as well, so I connected the user
 data back to that. In the following plot, each dot is a view. The location along
 the Y axis indicates the user that created it, the location along the X axis
-indicates the date of publication, and the color indicates the type of view.
+indicates the date of publication.
 
 ```{r user.views.1}
 user.views <- sqldf('
@@ -448,15 +425,17 @@ GROUP BY socrata.id')
 user.views$date <- user.views$createdAt
 user.views[is.na(user.views$date),'date'] <- user.views[is.na(user.views$createdAt),'publicationDate']
 
-ggplot(user.views) + aes(x = date, y = userid, color = viewType) + geom_point() +
+p <- ggplot(user.views) + aes(x = date, y = userid) + geom_point(alpha = 1/10) +
   theme(axis.text.y=element_blank(), axis.title.y = element_text('User creating the view'), axis.ticks.y = element_blank()) +
   scale_x_date('View publication date')
+p
 ```
 
+Let's add some more variables. In this next one, color is the type of view
+and size is the number of cells.
+
 ```{r user.views.2}
-ggplot(user.views) + aes(x = date, y = userid, color = viewType) + geom_point() +
-  theme(axis.text.y=element_blank(), axis.title.y = element_text('User creating the view'), axis.ticks.y = element_blank()) +
-  scale_x_date('View publication date')
+p + aes(color = viewType, size = nrow * ncol) + scale_size_continuous('Number of cells', labels = comma)
 ```
 
 The horizontal lines are users who have consistently created views for a while.
