--- a/words/03-users.Rmd
+++ b/words/03-users.Rmd
@@ -383,10 +383,10 @@ the Y axis indicates the user that created it, the location along the X axis
 indicates the date of publication.
 
 ```{r user.views.1}
-p <- ggplot(user.views) + aes(x = date, y = userid) + geom_point(alpha = 1/10) +
+p <- ggplot(user.views) + aes(x = date, y = userid) + 
   theme(axis.text.y=element_blank(), axis.title.y = element_text('User creating the view'), axis.ticks.y = element_blank()) +
   scale_x_date('View publication date')
-p
+p + geom_point(alpha = 1/20)
 ```
 
 The horizontal lines are users who have consistently created views for a while.
@@ -397,13 +397,28 @@ Let's add some more variables. In this next one, color is the type of view
 and size is the number of cells.
 
 ```{r user.views.2}
-p + aes(color = viewType, size = nrow * ncol) + scale_size_continuous('Number of cells', labels = comma)
+p + aes(color = viewType, size = nrow * ncol) + scale_size_continuous('Number of cells', labels = comma) +
+ geom_point(alpha = 1/10)
 ```
 
 Now we can also see when the larger datasets and the non-tabular datasets were created.
 
-#### What are those vertical bands?
+### What are those vertical bands?
 We see vertical bands at early 2008, early 2009 and late 2011. What's going on there?
+
+#### Late 2011
+The late 2011 band happened right at the beginning of October.
+Maybe it was a new portal getting online?
+
+<!-- 
+p + geom_point(alpha = 1/20) +
+  geom_vline(xintercept = as.numeric(as.Date('2011-09-01'))) +
+  geom_vline(xintercept = as.numeric(as.Date('2011-10-01')))
+-->
+
+```{r late.2011}
+late.2011 <- subset(socrata, createdAt >= '2011-06-01' & createdAt < '2012-01-01')
+```
 
 Before late 2009, [opendata.socrata.com](https://opendata.socrata.com) was the only
 data portal. That is all of the views that were created before late 2009 are on
