--- a/words/03-users.Rmd
+++ b/words/03-users.Rmd
@@ -440,11 +440,15 @@ A few users made many rather consistent uploads, some for rather sustained perio
 Let's take a look at some of them.
 
 ```{r 
-user.intensity <- ddply(user.views, 'userid', function(df){
+user.intensity <- subset(ddply(user.views, 'userid', function(df){
   c(n = nrow(df),
     first = min(df$date),
     last = max(df$date)
   )
-})
+}), n > 10)
 
+intense.users.ids <- data.frame(userid = user.intensity[order((user.intensity$last - user.intensity$first) / user.intensity$n, decreasing=T),'userid'][1:10])
+intense.users.views <- sqldf('select * from "user.views" join "intense.users.ids" join socrata where "user.views".userid = "intense.users.ids".userid and "user.views".viewid = socrata.id')
+ggplot(intense.users.views) + aes(x = date, y = userid) + 
+  scale_x_date('View publication date') + geom_point(alpha = 1/20)
 ```
